# houdini-mcp

./: .gitignore  123_houdinimcp.py  CLAUDE.md  DEVELOPERS.md  INSTALLATION.md  README.md  houdinimcp_addon.py  install.py  pyproject.toml
src/houdini_mcp/: server.py
