[project]
name = "houdini-mcp"
version = "0.1.0"
description = "Houdini integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.9.0"
authors = [
    {name = "capoom", email = "merih@capoom.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
houdini-mcp = "houdini_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/nscrdesigns/houdini-mcp"
"Bug Tracker" = "https://github.com/nscrdesigns/houdini-mcp/issues"